--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,9 +12,9 @@
 <body>
 	<div id="wrapper">
 		<div class="owl-carousel" id="slider-area">
-			<div style="background-image: url(https://muasieunhanh.com/wp-content/uploads/2020/11/otaku-la-gi.jpg)"></div>
+			<div style="background-image: url(https://images.ctfassets.net/rw1c9zty1onu/UZNrUEDloqmZGSKHuJ8nY/797f73e96578c04c8cdd11a6d551f086/softtoy.jpg)"></div>
 			<div style="background-image: url(https://hoctottiengnhat.net/wp-content/uploads/2022/11/wibu-1.jpg)"></div>
-			<div style="background-image: url(https://dbk.vn/uploads/ckfinder/images/1-content/wibu-la-gi-1.jpg)"></div>
+			<div style="background-image: url(https://vtv1.mediacdn.vn/zoom/640_400/2019/6/19/lede-15609585113571677251457.jpg)"></div>
 		</div>
 		<div class="nav-area">
 			<div class="nav">
