--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,8 +25,8 @@
 			</div>
 		</div>
 		<div class="slider-text">
-			<h2>ARENA of <span>WIBU</span></h2>
-			<p>Ban co phai la wibu khong ?</p><a href="/toy">YES, IAM !!!</a> <a class="btn" href="/lego">NOPE</a>
+			<h2>ARENA of <span>TOY</span></h2>
+			<a href="/toy">SHOPPING NOW</a> 
 		</div>
 	</div>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
